cluster/apps/media/apps/openbooks/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openbooks
  namespace: media
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - openbooks.${domain_name}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: ak-outpost-proxy-outpost
            namespace: authentik
      backendRefs:
        - name: openbooks
          port: 8080
