cluster/apps/media/apps/openbooks/app/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openbooks
  namespace: media
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`openbooks.${domain_name}`) && PathPrefix(`/`)
    services:
    - kind: Service
      name: openbooks
      namespace: media
      port: 8080
    middlewares:
    - name: ak-outpost-proxy-outpost
      namespace: authentik
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
